tests/suite/fail/generated/types/fail_assign_i32_to_bool_5.ny
fn main() {
    let x: bool = 1 //~ ERROR Type mismatch
    print(0)
}
